# cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  base36.cpp  concepts.cpp  coroutines.cpp  memory.cpp  memory_allocators.cpp  sqrt.cpp  std_map_reduce.cpp  utf8.cpp
apps/: CMakeLists.txt
apps/literals/: CMakeLists.txt  main.cpp
apps/memory/: CMakeLists.txt  main.cpp
cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  doctest.cmake
doc/: CMakeLists.txt  good_practices.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  src.cpp
tests/: CMakeLists.txt  memory_allocators.cpp  testlib.cpp
